Fixed bug #42820 (defined() on constant with namespace prefixes tries to load class).